# gitscape.ai

./: .mcp.json  LICENSE  README.md  SPEC.md  SPEC_DEPLOY_FIX.md  THIRD_PARTY_NOTICES.md  cloudbuild.yaml  deploy.ps1  dev.ps1  service.yaml
api/: README.md  (+5 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
backend/app/: admin_router.py  api.py  config.py  converter.py  mcp.py  registry_store.py  skill_builder.py
backend/app/skillforge/: __init__.py  assemble.py  authored.py  builder.py  cache.py  classify.py  exporters.py  freshness.py  hd.py  ingest.py  models.py  package.py  sanitize.py  scan_legacy_delete.py  signing.py  tslang.py
backend/app/skillforge/extract/: __init__.py  examples.py  graph.py  setup.py  symbols.py
backend/app/skillforge/scan/: __init__.py  behavioral.py  context.py  engine.py  judge.py  license_detect.py  osv.py  registry.py  sarif.py  scoring.py  taxonomy.py
backend/scratch/: test_refined_regex.py  test_regex.py
backend/scripts/: seed_registry.py
backend/tests/: conftest.py  test_adversarial_corpus.py  test_api.py  test_api_scan.py  test_assemble.py  test_authored.py  test_build_end_to_end.py  test_classify.py  test_freshness.py  test_mcp.py  test_mcp_scan.py  test_registry_store.py  test_sanitize.py  test_scan.py  test_scan_behavioral.py  test_scan_execution.py  test_scan_obfuscation.py  test_scan_osv.py  test_scan_report.py  test_scan_scoring.py  test_scan_secrets.py  test_scan_supply_chain.py  test_signing.py  test_skill_collection_e2e.py
(+190 files in other folders)
